readme changed again

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-This is the KIN 280 lab1 for university of regina
+
+This is the KIN 280 lab1 for university of regina.
+
 open index.html to see the web page.
+
+All Copyright belongs to Ray Lei @ Centre for Teaching and Learning at University of Regina
 
